--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "ionic-app-scripts lint"
   },
   "dependencies": {
+    "@agm/core": "^1.0.0-beta.5",
     "@angular/animations": "5.2.11",
     "@angular/common": "5.2.11",
     "@angular/compiler": "5.2.11",
@@ -21,6 +22,7 @@
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
     "@ionic-native/core": "~4.18.0",
+    "@ionic-native/geolocation": "^5.0.0",
     "@ionic-native/google-plus": "^4.20.0",
     "@ionic-native/splash-screen": "~4.18.0",
     "@ionic-native/status-bar": "~4.18.0",
@@ -34,6 +36,7 @@
     "cordova-plugin-customurlscheme": "4.3.0",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-facebook4": "4.1.0",
+    "cordova-plugin-geolocation": "4.0.1",
     "cordova-plugin-inappbrowser": "3.0.0",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.3.2",
@@ -44,9 +47,11 @@
     "cordova-universal-links-plugin-fix": "1.2.1",
     "firebase": "^5.8.0",
     "ionic-angular": "3.9.2",
+    "ionic-native": "^2.9.0",
     "ionicons": "3.0.0",
     "promise-polyfill": "^8.1.0",
-    "rxjs": "5.5.11",
+    "rxjs": "^6.0.0",
+    "rxjs-compat": "^6.4.0",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.26"
   },
@@ -74,7 +79,8 @@
         "APP_NAME": "First.StartUp.Aiham.Adam",
         "FACEBOOK_HYBRID_APP_EVENTS": "false",
         "FACEBOOK_ANDROID_SDK_VERSION": "4.38.1"
-      }
+      },
+      "cordova-plugin-geolocation": {}
     },
     "platforms": [
       "android"
