--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@ionic-native/status-bar": "~4.18.0",
     "@ionic/pro": "2.0.4",
     "@ionic/storage": "2.2.0",
+    "@reactivex/rxjs": "^5.5.3",
     "angularfire2": "^5.1.1",
     "cordova-android": "7.1.4",
     "cordova-plugin-browsertab": "0.2.0",
@@ -39,25 +40,25 @@
     "cordova-plugin-geolocation": "4.0.1",
     "cordova-plugin-inappbrowser": "3.0.0",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
-    "cordova-plugin-ionic-webview": "^2.3.2",
+    "cordova-plugin-ionic-webview": "^2.3.3",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-universal-links-plugin": "~1.2.1",
     "cordova-universal-links-plugin-fix": "1.2.1",
-    "firebase": "^5.8.0",
+    "firebase": "^5.8.2",
     "ionic-angular": "3.9.2",
     "ionic-native": "^2.9.0",
     "ionicons": "3.0.0",
     "promise-polyfill": "^8.1.0",
-    "rxjs": "^6.0.0",
+    "rxjs": "^5.5.12",
     "rxjs-compat": "^6.4.0",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.2.1",
-    "typescript": "~2.6.2"
+    "typescript": "^2.3.4"
   },
   "description": "An Ionic project",
   "cordova": {
