--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "@reactivex/rxjs": "^5.5.3",
     "angularfire2": "^5.1.1",
     "cordova-android": "7.1.4",
+    "cordova-browser": "^5.0.4",
     "cordova-plugin-browsertab": "0.2.0",
     "cordova-plugin-buildinfo": "2.0.2",
+    "cordova-plugin-camera": "4.0.3",
     "cordova-plugin-compat": "1.2.0",
     "cordova-plugin-customurlscheme": "4.3.0",
     "cordova-plugin-device": "^2.0.2",
@@ -51,7 +53,7 @@
     "ionic-native": "^2.9.0",
     "ionicons": "3.0.0",
     "promise-polyfill": "^8.1.0",
-    "rxjs": "^5.5.12",
+    "rxjs": "^6.0.0",
     "rxjs-compat": "^6.4.0",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.26"
@@ -81,9 +83,11 @@
         "FACEBOOK_HYBRID_APP_EVENTS": "false",
         "FACEBOOK_ANDROID_SDK_VERSION": "4.38.1"
       },
-      "cordova-plugin-geolocation": {}
+      "cordova-plugin-geolocation": {},
+      "cordova-plugin-camera": {}
     },
     "platforms": [
+      "browser",
       "android"
     ]
   }
