--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/compiler": "5.2.11",
     "@angular/compiler-cli": "5.2.11",
     "@angular/core": "5.2.11",
+    "@angular/fire": "^5.1.1",
     "@angular/forms": "5.2.11",
     "@angular/http": "5.2.11",
     "@angular/platform-browser": "5.2.11",
@@ -48,7 +49,7 @@
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-universal-links-plugin": "~1.2.1",
     "cordova-universal-links-plugin-fix": "1.2.1",
-    "firebase": "^5.8.2",
+    "firebase": "^5.8.4",
     "ionic-angular": "3.9.2",
     "ionic-native": "^2.9.0",
     "ionicons": "3.0.0",
