--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ionic-native/core": "~4.18.0",
     "@ionic-native/geolocation": "^5.0.0",
     "@ionic-native/google-plus": "^4.20.0",
+    "@ionic-native/native-geocoder": "^4.20.0",
     "@ionic-native/splash-screen": "~4.18.0",
     "@ionic-native/status-bar": "~4.18.0",
     "@ionic/pro": "2.0.4",
@@ -88,7 +89,8 @@
       },
       "cordova-plugin-geolocation": {},
       "cordova-plugin-camera": {},
-      "mx.ferreyra.callnumber": {}
+      "mx.ferreyra.callnumber": {},
+      "cordova-plugin-nativegeocoder": {}
     },
     "platforms": [
       "browser",
